lustre-collector/src/snapshots/lustre_collector__recovery_status_parser__tests__multiple.snap
---
source: lustre-collector/src/recovery_status_parser.rs
expression: records
---
[
    Target(
        RecoveryStatus(
            TargetStat {
                kind: Ost,
                param: Param(
                    "recovery_status",
                ),
                target: Target(
                    "fs-OST0000",
                ),
                value: Complete,
                header: None,
            },
        ),
    ),
    Target(
        RecoveryDuration(
            TargetStat {
                kind: Ost,
                param: Param(
                    "recovery_status",
                ),
                target: Target(
                    "fs-OST0000",
                ),
                value: 150,
                header: None,
            },
        ),
    ),
    Target(
        RecoveryCompletedClients(
            TargetStat {
                kind: Ost,
                param: Param(
                    "recovery_status",
                ),
                target: Target(
                    "fs-OST0000",
                ),
                value: 4,
                header: None,
            },
        ),
    ),
    Target(
        RecoveryStatus(
            TargetStat {
                kind: Ost,
                param: Param(
                    "recovery_status",
                ),
                target: Target(
                    "fs-OST0001",
                ),
                value: Complete,
                header: None,
            },
        ),
    ),
    Target(
        RecoveryDuration(
            TargetStat {
                kind: Ost,
                param: Param(
                    "recovery_status",
                ),
                target: Target(
                    "fs-OST0001",
                ),
                value: 150,
                header: None,
            },
        ),
    ),
    Target(
        RecoveryCompletedClients(
            TargetStat {
                kind: Ost,
                param: Param(
                    "recovery_status",
                ),
                target: Target(
                    "fs-OST0001",
                ),
                value: 4,
                header: None,
            },
        ),
    ),
    Target(
        RecoveryStatus(
            TargetStat {
                kind: Mdt,
                param: Param(
                    "recovery_status",
                ),
                target: Target(
                    "fs-MDT0000",
                ),
                value: Complete,
                header: None,
            },
        ),
    ),
    Target(
        RecoveryDuration(
            TargetStat {
                kind: Mdt,
                param: Param(
                    "recovery_status",
                ),
                target: Target(
                    "fs-MDT0000",
                ),
                value: 1760,
                header: None,
            },
        ),
    ),
    Target(
        RecoveryCompletedClients(
            TargetStat {
                kind: Mdt,
                param: Param(
                    "recovery_status",
                ),
                target: Target(
                    "fs-MDT0000",
                ),
                value: 3,
                header: None,
            },
        ),
    ),
]
