lustre-collector/src/snapshots/lustre_collector__recovery_status_parser__tests__target_recovery_stats2.snap
---
source: src/recovery_status_parser.rs
expression: records
---
[
    Status(
        Recovering,
    ),
    Connected(
        3,
    ),
    Completed(
        3,
    ),
]
